--- a/articles/virtual-machine-scale-sets/TOC.yml
+++ b/articles/virtual-machine-scale-sets/TOC.yml
@@ -156,6 +156,8 @@
           maintainContext: true
     - name: Veelgestelde vragen over schaalsets
       href: virtual-machine-scale-sets-faq.md
+    - name: Beveiligingskenmerken
+      href: virtual-machine-scale-sets-security-attributes.md
 - name: Procedures
   items:
     - name: Plannen en ontwerpen
