--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -132,6 +132,8 @@
       href: backup-recovery.md
     - name: Infrastructuurvoorbeeld
       href: infrastructure-example.md
+    - name: Beveiligingskenmerken
+      href: virtual-machines-windows-security-attributes.md
 - name: Handleidingen
   items:
     - name: Virtuele machines maken
