--- a/articles/virtual-machines/TOC.yml
+++ b/articles/virtual-machines/TOC.yml
@@ -13,7 +13,7 @@
     - name: SAP
       href: workloads/sap/get-started.md
     - name: High Performance Computing
-      href: workloads/hpc/configure.md
+      href: workloads/hpc/overview.md
     - name: Mainframe opnieuw hosten
       href: workloads/mainframe-rehosting/overview.md
 - name: Klassieke implementaties
