--- a/articles/data-share/index.yml
+++ b/articles/data-share/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.topic: landing-page
   ms.date: 07/10/2019
 abstract:
-  description: '<p>Azure Data Share Preview is een veilige en beveiligde service om gegevens te delen met externe organisaties. Selecteer de gegevenssets die u wilt delen, voeg de ontvangers toe en deel de gegevens met de mogelijkheid om degene met wie u gegevens deelt te beheren en te bewaken. </p><p>Informatie over het gebruik van Azure Data Share via onze zelfstudies.</p>'
+  description: '<p>Azure Data Share Preview is een veilige en beveiligde service om gegevens te delen met externe organisaties. Selecteer de gegevenssets die u wilt delen, voeg de ontvangers toe en deel de gegevens met de mogelijkheid om degene met wie u gegevens deelt te beheren en te bewaken. </p><p>Informatie over het gebruik van Azure Data Share via onze zelfstudies en instructiegidsen.</p>'
   aside:
     image:
       alt: null
