--- a/articles/fxt-edge-filer/toc.yml
+++ b/articles/fxt-edge-filer/toc.yml
@@ -34,3 +34,5 @@
       href: fxt-specs.md
     - name: Aanvullende documentatie
       href: fxt-additional-doc.md
+    - name: Een ondersteuningsticket openen
+      href: fxt-support-ticket.md
