--- a/articles/fxt-edge-filer/index.yml
+++ b/articles/fxt-edge-filer/index.yml
@@ -7,7 +7,7 @@ metadata:
   author: ekpgh
   ms.service: fxt-edge-filer
   ms.topic: landing-page
-  ms.date: 06/20/2019
+  ms.date: 07/10/2019
   ms.author: v-erkell
 abstract:
   description: 'De hybride opslagcache van Azure FXT Edge Filer is een hybride hardware-/softwaresysteem dat zorgt voor snellere gegevenstoegang voor lees-intensieve high performance computing (HPC)-werkstromen op basis van bestanden. Een cluster met drie of meer Azure FXT Edge Filer-apparaten kan de opslagprestaties versnellen van on-premises NAS-systemen (NetApp of Dell EMC Isilon), van cloudopslag of van een combinatie van oplossingen.'
@@ -39,3 +39,4 @@ sections:
         items:
           - html: <a href="fxt-specs">Hardwarespecificaties</a>
           - html: <a href="fxt-additional-doc">Aanvullende documentatie</a>
+          - html: <a href="fxt-support-ticket">Een ondersteuningsticket openen</a>
