--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -224,9 +224,9 @@
         - name: Waar en hoe u implementeert
           displayName: publish azure kubernetes azure container instances
           href: how-to-deploy-and-where.md
-        - name: GPU's
+        - name: Inferentie van GPU
           href: how-to-deploy-inferencing-gpus.md
-        - name: FPGAs
+        - name: Inferentie van FPGA's
           href: how-to-deploy-fpga-web-service.md
         - name: IoT Edge
           href: /azure/iot-edge/tutorial-deploy-machine-learning?context=azure/machine-learning/service/context/ml-context
@@ -235,7 +235,7 @@
         - name: Bestaande modellen implementeren
           displayName: publish existing model
           href: how-to-deploy-existing-model.md
-        - name: Problemen oplossen
+        - name: Problemen oplossen en fouten opsporen
           href: how-to-troubleshoot-deployment.md
     - name: Webservices gebruiken
       items:
