--- a/articles/managed-applications/toc.yml
+++ b/articles/managed-applications/toc.yml
@@ -11,17 +11,27 @@
       href: publish-managed-app-definition-quickstart.md
     - name: Servicecatalogus-app implementeren
       href: deploy-service-catalog-quickstart.md
+    - name: Een aangepaste resourceprovider maken
+      href: create-custom-provider.md
 - name: Zelfstudies
   items:
+    - name: aangepaste providers
+      items:
+        - name: Aan de slag met aangepaste providers
+          href: tutorial-custom-providers-101.md
+        - name: Azure Functions instellen
+          href: tutorial-custom-providers-function-setup.md
+        - name: Een RESTful-eindpunt maken
+          href: tutorial-custom-providers-function-authoring.md
+        - name: Aangepaste providers maken en gebruiken
+          href: tutorial-custom-providers-create.md
     - name: Definitiebestanden maken
       href: publish-service-catalog-app.md
     - name: Marketplace-toepassing publiceren
       href: publish-marketplace-app.md
-    - name: Een aangepaste resourceprovider maken
-      href: create-custom-provider.md
 - name: Voorbeelden
   items:
-    - name: Azure-CLI
+    - name: De Azure CLI
       href: cli-samples.md
     - name: Azure PowerShell
       href: powershell-samples.md
@@ -29,13 +39,13 @@
       href: sample-projects.md
 - name: Concepten
   items:
-    - name: Aangepaste Azure-resourceproviders
+    - name: Aangepaste Azure-providers
       href: custom-providers-overview.md
     - name: Definitie-artefact weergeven
       href: concepts-view-definition.md
 - name: Handleidingen
   items:
-    - name: Aangepaste resourceproviders
+    - name: Aangepaste providers
       items:
         - name: Aangepaste acties toevoegen aan Azure
           href: custom-providers-action-endpoint-how-to.md
@@ -65,12 +75,14 @@
           href: approve-just-in-time-access.md
 - name: Naslaginformatie
   items:
-    - name: Aangepaste resourceproviders
+    - name: Aangepaste providers
       items:
         - name: Referentiemateriaal voor aangepaste resource-proxy
           href: custom-providers-proxy-resource-endpoint-reference.md
         - name: Referentiemateriaal voor aangepaste resource-cache
           href: custom-providers-proxy-cache-resource-endpoint-reference.md
+        - name: Naslaginformatie voor RESTful-eindpunt van aangepaste provider
+          href: reference-custom-providers-csharp-endpoint.md
     - name: Azure-CLI
       href: /cli/azure/managedapp
     - name: PowerShell
