--- a/articles/media-services/TOC.yml
+++ b/articles/media-services/TOC.yml
@@ -7,6 +7,20 @@
   href: video-indexer/
 - name: Azure Media Player
   href: 'https://amp.azure.net/libs/amp/latest/docs/index.html'
+- name: Specificaties
+  items:
+    - name: Getimede metagegevens
+      items:
+        - name: RTMP en Smooth Streaming
+          href: media-services-specifications-live-timed-metadata.md
+    - name: Protocollen
+      items:
+        - name: Smooth Streaming (MS-SSTR)
+          items:
+            - name: HEVC-ondersteuning
+              href: media-services-specifications-ms-sstr-amendment-hevc.md
+            - name: Smooth Streaming-opname
+              href: media-services-fmp4-live-ingest-overview.md
 - name: Resources
   items:
     - name: Azure-roadmap
