--- a/articles/cognitive-services/Bing-Video-Search/toc.yml
+++ b/articles/cognitive-services/Bing-Video-Search/toc.yml
@@ -52,7 +52,8 @@
     - name: Bladeren door video 's
       href: paging-videos.md
     - name: Het formaat van miniaturen wijzigen en miniaturen bijsnijden
-      href: resize-and-crop-thumbnails.md
+      maintainContext: true
+      href: ../bing-web-search/resize-and-crop-thumbnails.md
     - name: Upgrade uitvoeren van v5 naar v7
       href: bing-video-upgrade-guide-v5-to-v7.md
 - name: Concepten
