--- a/articles/mariadb/TOC.yml
+++ b/articles/mariadb/TOC.yml
@@ -49,6 +49,8 @@
           href: concepts-firewall-rules.md
         - name: SSL configureren
           href: concepts-ssl-connection-security.md
+        - name: Advanced Threat Protection
+          href: concepts-data-access-and-security-threat-protection.md
         - name: VNet
           href: concepts-data-access-security-vnet.md
         - name: Connectiviteitsarchitectuur
@@ -149,6 +151,10 @@
           href: howto-troubleshoot-common-connection-issues.md
         - name: Prestatieproblemen van query's oplossen
           href: howto-troubleshoot-query-performance.md
+    - name: Advanced Threat Protection
+      items:
+        - name: Azure Portal
+          href: howto-database-threat-protection-portal.md
     - name: Virtual Network
       items:
         - name: Azure Portal
