commit translated contents

--- a/articles/active-directory/authentication/TOC.yml
+++ b/articles/active-directory/authentication/TOC.yml
@@ -16,8 +16,6 @@
       href: tutorial-sspr-pilot.md
     - name: On-premises integratie van selfservice voor wachtwoordherstel inschakelen
       href: tutorial-enable-writeback.md
-    - name: Windows 10-wachtwoordherstel inschakelen
-      href: tutorial-sspr-windows.md
     - name: Azure Identity Protection integreren
       href: tutorial-risk-based-sspr-mfa.md
 - name: Concepten
@@ -73,8 +71,8 @@
           href: howto-sspr-authenticationdata.md
         - name: Wachtwoord terugschrijven inschakelen
           href: howto-sspr-writeback.md
-        - name: 'Self-service voor wachtwoordherstel in Windows 7, 8 en 8.1'
-          href: howto-sspr-windows-7-8.md
+        - name: Self-service voor wachtwoordherstel voor Windows-clients
+          href: howto-sspr-windows.md
     - name: MFA in de cloud
       items:
         - name: MFA in de cloud implementeren
