--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -158,7 +158,7 @@
       items:
         - name: Failover van account initiëren
           href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-    - name: De opslagemulator gebruiken
+    - name: De Azure Storage-emulator gebruiken
       href: ../common/storage-use-emulator.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: Ontwerpen met wachtrijen
       items:
