--- a/articles/azure-app-configuration/TOC.yml
+++ b/articles/azure-app-configuration/TOC.yml
@@ -29,6 +29,8 @@
   items:
     - name: Dynamische configuratie in ASP.NET Core inschakelen
       href: enable-dynamic-configuration-aspnet-core.md
+    - name: Dynamische configuratie in een .Net Core-app inschakelen
+      href: enable-dynamic-configuration-dotnet-core.md
     - name: Functievlaggen gebruiken in een .NET Core-app
       href: use-feature-flags-dotnet-core.md
     - name: Functievlaggen beheren
