--- a/articles/batch/TOC.yml
+++ b/articles/batch/TOC.yml
@@ -27,7 +27,7 @@
       href: tutorial-rendering-batchexplorer-blender.md
     - name: Parallelle R-simulatie
       href: tutorial-r-doazureparallel.md
-    - name: OCR met Batch en Azure Functions
+    - name: OCR met Batch en Functions
       href: tutorial-batch-functions.md
 - name: Voorbeelden
   items:
