--- a/articles/hdinsight/spark/TOC.yml
+++ b/articles/hdinsight/spark/TOC.yml
@@ -22,6 +22,8 @@
       href: apache-spark-load-data-run-query.md
     - name: IntelliJ gebruiken om Apache Spark-query's uit te voeren
       href: apache-spark-intellij-tool-plugin.md
+    - name: Fout bij foutopsporing in Spark-taak in IntelliJ (preview)
+      href: apache-spark-intellij-tool-failure-debug.md
     - name: Gegevens analyseren met BI-tools
       href: apache-spark-use-bi-tools.md
     - name: Streamingtaak uitvoeren
