--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -131,6 +131,8 @@
           href: search-what-is-an-index.md
         - name: Een index maken (portal)
           href: search-create-index-portal.md
+        - name: Een index voor meerdere talen maken
+          href: search-language-support.md
         - name: Analyses
           items:
             - name: Analyses toevoegen
@@ -360,6 +362,8 @@
       href: 'https://azure.microsoft.com/support/community/?product=search'
     - name: Azure-updates
       href: 'https://azure.microsoft.com/updates/?product=search'
+    - name: Feedbackforum (UserVoice)
+      href: 'https://feedback.azure.com/forums/263029-azure-search'
     - name: Demosites
       items:
         - name: Demo met financiële bestanden
