--- a/articles/security/TOC.yml
+++ b/articles/security/TOC.yml
@@ -353,6 +353,8 @@
               href: azure-security-threat-modeling-tool-releases-71601261.md
             - name: Threat Modeling Tool-updaterelease 7.1.60408.1 - 9 april 2019
               href: azure-security-threat-modeling-tool-releases-71604081.md
+            - name: Threat Modeling Tool-updaterelease 7.1.60702.1 - 2 juli 2019
+              href: azure-security-threat-modeling-tool-releases-71607021.md
         - name: Oplossingen
           href: azure-security-threat-modeling-tool-mitigations.md
           items:
