--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -352,8 +352,12 @@
               href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Verwijderde blobs herstellen
               href: storage-blob-soft-delete.md
-        - name: De opslagemulator gebruiken
-          href: ../common/storage-use-emulator.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: Een opslagemulator gebruiken
+          items:
+            - name: De opensource-emulator Azurite gebruiken
+              href: ../common/storage-use-azurite.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: De Azure Storage-emulator gebruiken
+              href: ../common/storage-use-emulator.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Eigenschappen en metagegevens instellen en ophalen
           href: storage-properties-metadata.md
         - name: Een statische website hosten
