--- a/articles/virtual-machine-scale-sets/TOC.yml
+++ b/articles/virtual-machine-scale-sets/TOC.yml
@@ -66,10 +66,17 @@
     - name: Azure Resource Manager
       href: ../azure-resource-manager/resource-group-overview.md
       maintainContext: true
-    - name: Regio’s en beschikbaarheid
-      href: ../virtual-machines/windows/regions-and-availability.md
+    - name: Regio's
+      href: ../virtual-machines/windows/regions.md
+    - name: Beschikbaarheid en prestaties
       maintainContext: true
       items:
+        - name: Beschikbaarheid
+          href: availability.md
+        - name: Co-locatie
+          href: co-location.md
+        - name: Netwerkprestaties
+          href: ../virtual-network/virtual-network-optimize-network-bandwidth.md?toc=%2fazure%2fvirtual-machine-scale-sets%2fwindows%2ftoc.json
         - name: Foutdomeinen beheren in schaalsets
           href: virtual-machine-scale-sets-manage-fault-domains.md
     - name: VM-typen en -groottes
@@ -245,6 +252,8 @@
               href: share-images-across-tenants.md
             - name: Problemen met gedeelde installatiekopieën oplossen
               href: troubleshooting-shared-images.md
+        - name: Een nabijheidsplaatsingsgroep maken
+          href: proximity-placement-groups.md
         - name: Verticaal schalen in een schaalset
           href: virtual-machine-scale-sets-vertical-scale-reprovision.md
         - name: DSC en schaalsets gebruiken
