--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -137,10 +137,14 @@
           href: how-to-update-iot-edge.md
     - name: Automatisch inrichten met DPS
       items:
-        - name: Linux
-          href: how-to-auto-provision-simulated-device-linux.md
-        - name: Windows
-          href: how-to-auto-provision-simulated-device-windows.md
+        - name: Attestation met behulp van een symmetrische sleutel
+          href: how-to-auto-provision-symmetric-keys.md
+        - name: TPM-attestation
+          items:
+            - name: Linux
+              href: how-to-auto-provision-simulated-device-linux.md
+            - name: Windows
+              href: how-to-auto-provision-simulated-device-windows.md
     - name: Aangepaste modules ontwikkelen en er fouten in opsporen
       items:
         - name: Visual Studio 2019
