--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -195,6 +195,8 @@
           href: search-howto-schedule-indexers.md
         - name: Velden toewijzen
           href: search-indexer-field-mappings.md
+        - name: Verbinding maken met beheerd SQL-exemplaar
+          href: search-howto-connecting-azure-sql-mi-to-azure-search-using-indexers.md
         - name: Verbinding maken met SQL Server-VM's
           href: search-howto-connecting-azure-sql-iaas-to-azure-search-using-indexers.md
         - name: Indexeerfuncties bewaken
